--- a/Evidence-Retrieval/requirements.txt
+++ b/Evidence-Retrieval/requirements.txt
@@ -1,35 +1,60 @@
-# Core HTTP
-requests>=2.31.0
+# ================================
+# Backend API (FastAPI)
+# ================================
+fastapi>=0.110.0
+uvicorn>=0.29.0
 
-# Environment variables
+# ================================
+#  Core HTTP & Env
+# ================================
+requests>=2.31.0
 python-dotenv>=1.0.0
 
-# NLP preprocessing
+# ================================
+#  NLP Preprocessing
+# ================================
 nltk>=3.8.1
 
-# String similarity
+# ================================
+# String Similarity
+# ================================
 fuzzywuzzy>=0.18.0
 python-Levenshtein>=0.21.1
 
-# Semantic embeddings
+# ================================
+# Semantic Embeddings
+# ================================
 sentence-transformers>=2.2.2
 
-# Vector search
+# ================================
+# Vector Search
+# ================================
 faiss-cpu>=1.7.4
 
-# Lexical retrieval
+# ================================
+# Lexical Retrieval
+# ================================
 rank-bm25>=0.2.2
 
-# ML utilities
+# ================================
+# ML Utilities
+# ================================
 scikit-learn>=1.3.0
-
-# Numeric backend
 numpy>=1.23.0
 
-# Deep learning (NLI)
+# ================================
+# Deep Learning (NLI)
+# ================================
 torch>=2.0.0
 transformers>=4.36.0
 safetensors>=0.4.0
 
-# Progress bars
+# ================================
+#  Progress Bars
+# ================================
 tqdm>=4.66.0
+
+# ================================
+#  Frontend (Streamlit)
+# ================================
+streamlit>=1.32.0
