--- a/Evidence-Retrieval/requirements.txt
+++ b/Evidence-Retrieval/requirements.txt
@@ -5,13 +5,13 @@ fastapi>=0.110.0
 uvicorn>=0.29.0
 
 # ================================
-#  Core HTTP & Env
+# Core HTTP & Environment
 # ================================
 requests>=2.31.0
 python-dotenv>=1.0.0
 
 # ================================
-#  NLP Preprocessing
+# NLP Preprocessing
 # ================================
 nltk>=3.8.1
 
@@ -50,11 +50,21 @@ transformers>=4.36.0
 safetensors>=0.4.0
 
 # ================================
-#  Progress Bars
+# Progress Bars
 # ================================
 tqdm>=4.66.0
 
 # ================================
-#  Frontend (Streamlit)
+# Explainability Chatbot (LangChain)
+# ================================
+langchain>=0.1.16
+langchain-community>=0.0.32
+langchain-groq>=0.1.3
+langchain-huggingface>=0.0.3
+# (Used for embeddings + FAISS RAG)
+# sentence-transformers already included above
+
+# ================================
+# Frontend (Streamlit)
 # ================================
 streamlit>=1.32.0
